--- a/index.html
+++ b/index.html
@@ -17,8 +17,15 @@
             <a href="#contact">Contact Information</a>
         </nav>
     </header>
-    <div id="aboutme">
+    <div id="nav">
         <img class="me" src="./gettyimages-1368264464-2048x2048.jpg" alt="">
     </div>
+    <div class="container">
+        <img src="nature.jpg" alt="Norway" style="width:100%;">
+        <div class="text-block">
+          <h4>About Me</h4>
+          <p>I have been in supply chain/logistics for the past 8 years and now I'm looking to further my portfolio</p>
+        </div>
+  
 </body>
 </html>
