added more codes

--- a/index.html
+++ b/index.html
@@ -5,27 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+</section> 
+<section class="flex-section" id="work">
+    <article class="left-column">
+    </article>
+    <article class="right-column">
     <title>Kanika Asthana Portfolio</title>
 </head>
 <body>
     <header class="topnav">
-
         <h1>Kanika Asthana</h1>
         <nav>
-            <a href="#aboutme">About Me</a> 
+            <a href="#contact">Contact Information</a> 
             <a href="#mywork">My Work</a>
-            <a href="#contact">Contact Information</a>
+            <a href="#aboutme">About Me</a>
         </nav>
     </header>
-    <div id="nav">
-        <img class="me" src="./gettyimages-1368264464-2048x2048.jpg" alt="">
-    </div>
-    <div class="container">
-        <img src="nature.jpg" alt="Norway" style="width:100%;">
         <div class="text-block">
-          <h4>About Me</h4>
-          <p>I have been in supply chain/logistics for the past 8 years and now I'm looking to further my portfolio</p>
+          <h2>About Me</h2>
+          <p>I have been in supply chain/logistics for the past 8 years and now I'm looking to further my career! Combining my skills that I have already learned plus coding will help me bring a different perspective to companies. </p>
         </div>
-  
+    </div>
+  <div id="coffee">
+    <img src="./coffee.jpg" alt="coffee"></a>
+    <div id="sub-image-div2">
+    <img src="./workbench.jpg"style="workbench"></a>
+    <img src="./notebook.jpg"style="notebook"></a>
+    <img src="./london.jpg" style="london"></a>
+    <img src="./rocks.jpg" style="rocks"></a>
+  </div>
 </body>
+<section>
+     <ul id="footer">
+        <li><a href="#">312.888.1582</a></li>
+        <li><a href="#">kanika.asthana@gmail.com</a></li>
+        <li><a href="https://github.com/kasthana112/ka112port">GitHub</a></li>
+     </ul>
+   </footer> 
+</section>
 </html>
