added more info

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./style.css">
 </section> 
 <section class="flex-section" id="work">
@@ -36,6 +37,7 @@
   </div>
 </body>
 <section>
+    <div class="text-block">
      <ul id="footer">
         <li><a href="#">312.888.1582</a></li>
         <li><a href="#">kanika.asthana@gmail.com</a></li>
